<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="8dp"
    android:elevation="4dp"
    app:cardBackgroundColor="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="8dp" />

        <ImageView
            android:id="@+id/movie_background_image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.84"
            android:src="@drawable/movie"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/gradient_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/info_gradient"
            app:layout_constraintBottom_toBottomOf="@id/movie_background_image_view"
            app:layout_constraintEnd_toEndOf="@id/movie_background_image_view"
            app:layout_constraintStart_toStartOf="@id/movie_background_image_view"
            app:layout_constraintTop_toTopOf="@id/movie_background_image_view" />

        <TextView
            android:id="@+id/age_limit_text_view"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="6dp"
            android:alpha="0.9"
            android:background="@drawable/age_limit_rectangle"
            android:fontFamily="@font/roboto_black"
            android:gravity="center"
            android:text="@string/age_limit"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="@id/movie_background_image_view" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.75"
            android:src="@drawable/ic_like"
            app:layout_constraintBottom_toBottomOf="@id/age_limit_text_view"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toTopOf="@id/age_limit_text_view" />

        <TextView
            android:id="@+id/film_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/film_genre_drama"
            android:textColor="@color/film_genre_color"
            android:textSize="8sp"
            app:layout_constraintBottom_toTopOf="@id/reviews"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start" />

        <ImageView
            android:id="@+id/first_star"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@id/reviews"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="@id/reviews" />

        <ImageView
            android:id="@+id/second_star"
            android:layout_width="8dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@id/first_star"
            app:layout_constraintTop_toTopOf="@id/first_star"
            app:layout_constraintBottom_toBottomOf="@id/first_star"/>

        <ImageView
            android:id="@+id/third_star"
            android:layout_width="8dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@id/second_star"
            app:layout_constraintTop_toTopOf="@id/first_star"
            app:layout_constraintBottom_toBottomOf="@id/first_star"/>

        <ImageView
            android:id="@+id/fourth_star"
            android:layout_width="8dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@id/third_star"
            app:layout_constraintTop_toTopOf="@id/first_star"
            app:layout_constraintBottom_toBottomOf="@id/first_star"/>

        <ImageView
            android:id="@+id/fifth_star"
            android:layout_width="8dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@id/fourth_star"
            app:layout_constraintTop_toTopOf="@id/first_star"
            app:layout_constraintBottom_toBottomOf="@id/first_star"
            app:tint="@color/tint_color" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/feedback_rate"
            android:textColor="@color/tint_color"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@id/movie_background_image_view"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/fifth_star" />

        <TextView
            android:id="@+id/name_in_list_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/name_in_list"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/movie_background_image_view" />

        <TextView
            android:id="@+id/film_time_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/film_duration"
            android:textAllCaps="true"
            android:textColor="@color/film_duration"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/name_in_list_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>